Fixes adaptivity on mobile screens.

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -375,6 +375,7 @@ h4 {
 }
 
 .main-content {
+    box-sizing: border-box;
     padding: 20px 40px 20px 40px;
     width: 100%;
 
